Commit to save the content classes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <h1>
   {{title}}
 </h1>
+
+<first-component></first-component>
+<first-automatic-component></first-automatic-component>
+<first-module></first-module>
+<movie-component></movie-component>
+<data-binding-component></data-binding-component>
