--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -7,6 +7,7 @@
   <p>String renderizing: {{ name }}</p>
   <p>The result of 1 + 1 is? {{ 1+1 }}</p>
 </article>
+<br><br><br>
 
 <article>
   <h3>Class and Style Binding</h3>
@@ -25,6 +26,7 @@
   <div class="alert" role="alert" [class.alert-warning]="selectValue.value == 'alert-warning'">Warning</div>
   <div class="alert" role="alert" [class.alert-danger]="selectValue.value == 'alert-danger'">Error</div>
 </article>
+<br><br><br>
 
 <article>
   <h3>Event Binding</h3>
@@ -49,6 +51,7 @@
   </div>
   <br><br>
 </article>
+<br><br><br>
 
 <section class="two-way-binding">
   <article>
@@ -85,6 +88,20 @@
 
     </div>
   </article>
+</section>
+<br><br><br>
+
+
+<section class="input-output-properties">
+  <article>
+    <h3>Input/Output Properties</h3>
+
+    <app-movie [movieName]="movieName"></app-movie>
+
+    <counter counterValue="10"></counter>
+
+  </article>
+
 </section>
 
  
